Layout bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ img{
 
 div{
     margin : auto;
-    justify-content: center;
 }
 
 nav{
